--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
+html{
+  height: 100vh;
+}
+
+body{
+  height: 100vh;
+  justify-content: center;
+  font-family: Helvetica Neue;
+}
+
+.App{
+  flex: 1;
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+
+#quote-box{
+  align-self: center;
+  background-color: white;
+  margin: auto;
+  width: 50%;
+  border: 3px solid black;
+}
+
+#text{
+  margin-top: 1em;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.fa-twitter {
+  background: #55ACEE;
   color: white;
+  margin-left:400px;
 }
 
-.App-link {
-  color: #61dafb;
+q {
+  font-style: italic;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.center {
+  text-align: center;
+}
+
+#new-quote{
+  margin-left:30px;
 }
